--- a/po/de.po
+++ b/po/de.po
@@ -10,7 +10,7 @@ msgstr ""
 "Project-Id-Version: Televido main\n"
 "Report-Msgid-Bugs-To: https://github.com/d-k-bo/televido/issues\n"
 "POT-Creation-Date: 2023-10-15 13:15+0200\n"
-"PO-Revision-Date: 2023-10-20 13:10+0200\n"
+"PO-Revision-Date: 2023-10-20 20:55+0200\n"
 "Last-Translator: David Cabot <d-k-bo@mailbox.org>\n"
 "Language-Team: \n"
 "Language: de\n"
@@ -50,6 +50,20 @@ msgid ""
 msgstr ""
 "Die präsentierten Inhalte werden direkt von den jeweiligen Sendern angeboten, "
 "dieses Programm erleichtert dabei nur das Auffinden und Abrufen der Sendungen."
+
+#: data/de.k_bo.Televido.metainfo.xml.in:17
+msgid ""
+"For video playback, Televido uses external video players that are installed "
+"on the user's system. Currently supported players: GNOME Videos (Totem), "
+"Celluloid, Clapper."
+msgstr ""
+"Für die Videowiedergabe greift Televido auf externe Videoplayer zurück, die "
+"auf dem System installiert sind. Derzeit unterstütze Player: GNOME Videos "
+"(Totem), Celluloid, Clapper."
+
+#: data/de.k_bo.Televido.metainfo.xml.in:53
+msgid "Initital release"
+msgstr "Erstveröffentlichung"
 
 #: ../src/launcher/selector.blp:18
 msgid "Cancel"
