Support custom video players

--- a/po/de.po
+++ b/po/de.po
@@ -9,7 +9,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Televido main\n"
 "Report-Msgid-Bugs-To: https://github.com/d-k-bo/televido/issues\n"
-"POT-Creation-Date: 2023-10-26 21:32+0200\n"
+"POT-Creation-Date: 2023-10-29 18:20+0100\n"
 "PO-Revision-Date: 2023-10-20 20:55+0200\n"
 "Last-Translator: David Cabot <d-k-bo@mailbox.org>\n"
 "Language-Team: \n"
@@ -72,7 +72,7 @@ msgstr ""
 msgid "Initital release"
 msgstr "Erstveröffentlichung"
 
-#: src/application.rs:116
+#: src/application.rs:129
 msgid "Failed to play video stream"
 msgstr "Videostream konnte nicht abgespielt werden"
 
@@ -104,37 +104,52 @@ msgstr "Abbrechen"
 msgid "Confirm"
 msgstr "Bestätigen"
 
-#: src/launcher/selector.rs:76
+#: src/launcher/selector.blp:38
+msgid "Custom program"
+msgstr "Benutzerdefiniertes Programm"
+
+#. translators: `{}` is replaced by the application ID, e.g. `org.example.Application`
+#: src/launcher/selector.rs:115
+msgid "Could not find application “{}”"
+msgstr "Anwendung „{}“ konnte nicht gefunden werden"
+
+#: src/launcher/selector.rs:169
 msgid "Failed to load external applications"
 msgstr "Externe Anwendungen konnten nicht geladen werden."
 
-#: src/launcher/selector.rs:80 src/utils.rs:183
+#: src/launcher/selector.rs:173 src/utils.rs:183
 msgid "See the terminal output for details."
 msgstr "In den Programm-Logs finden Sie weitere Details."
 
-#. translators: `{}` is replaced by given ID, a valid one would be e.g. `org.gnome.Totem`
-#: src/launcher/selector.rs:146
-msgid "Invalid program ID: “{}”"
-msgstr "Ungültige Programm-ID: „{}“"
-
-#: src/launcher/selector.rs:196
+#: src/launcher/selector.rs:280
 msgid "Select video player"
 msgstr "Videoplayer auswählen"
 
-#: src/launcher/selector.rs:198
-msgid "Select one of the following external programs to stream content"
+#: src/launcher/selector.rs:281
+msgid "Select one of the following external programs to stream content."
 msgstr ""
 "Wählen Sie eines der folgenden externen Programme zum Streamen von Inhalten"
 
-#: src/launcher/selector.rs:202
+#: src/launcher/selector.rs:284
 msgid "Select video downloader"
 msgstr "Video-Downloader auswählen"
 
-#: src/launcher/selector.rs:204
-msgid "Select one of the following external programs to download content"
+#: src/launcher/selector.rs:285
+msgid "Select one of the following external programs to download content."
 msgstr ""
 "Wählen Sie eines der folgenden externen Programme zum Herunterladen von "
 "Inhalten"
+
+#: src/launcher/selector.rs:292
+msgid ""
+"You can also specify a custom application ID (e.g. org.example.Application) "
+"of a different program that supports DBus activation, is able to open a "
+"https:// URI and is accessible from the context of this application."
+msgstr ""
+"Sie können auch eine benutzerdefinierte Anwendungs-ID (z.B. org.example."
+"Application) angeben, um ein anderes Programm zu nutzen, das DBus-"
+"Aktivierung unterstützt, https://-URIs öffnen kann und aus dem Kontext "
+"dieser Anwendung erreicht werden kann."
 
 #: src/live/card.blp:46 src/mediathek/card.blp:86
 msgid "Play"
