--- a/po/fr.po
+++ b/po/fr.po
@@ -1,8 +1,7 @@
-# SOME DESCRIPTIVE TITLE.
-# Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
-# This file is distributed under the same license as the televido package.
-# FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
-# Irénée THIRION <irenee.thirion@e.email>, 2023.
+# French translation for Televido.
+#
+# SPDX-FileCopyrightText: 2023 Irénée THIRION <irenee.thirion@e.email>
+# SPDX-License-Identifier: GPL-3.0-or-later
 #
 msgid ""
 msgstr ""
