--- a/po/fr.po
+++ b/po/fr.po
@@ -59,7 +59,7 @@ msgid ""
 "(Totem), Celluloid, Clapper, Daikhan. Currently supported downloaders: "
 "Parabolic."
 msgstr ""
-"Televido fournit un lecteur intégré pour la lecture de vidéos. Par ailleurs, "
+"Televido fournit un lecteur vidéo intégré. Par ailleurs, "
 "Televido prend en charge des programmes externes installés sur le système de "
 "l’utilisateur pour la lecture et le téléchargement. Les lecteurs vidéos "
 "actuellement pris en charge sont : GNOME Vidéos (Totem), Celluloid, Clapper, "
